# NSG_VisionAI

./: .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.ml  IMPLEMENTATION_STATUS.md  README.md  alembic.ini  docker-compose.yml  nsg_visionai_master_prompt.docx  nsg_visionai_master_prompt.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  settings_dir.txt  test_out.txt  verify_feeds_endpoints.py
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 20240421_1200_001_initial_schema.py  20240421_1201_002_audit_log_immutability.py  20240421_1202_003_timescaledb_compression.py
app/: __init__.py  main.py
app/core/: .gitkeep  celery_app.py  config.py  database.py  redis.py  security.py
app/ml/: .gitkeep  __init__.py
app/ml/anomaly/: __init__.py  lstm_worker.py
app/ml/detection/: __init__.py  face_worker.py  yolo_worker.py
app/ml/ingestion/: __init__.py  stream_ingester.py  webrtc_ingester.py
app/ml/ocr/: alpr_worker.py
app/ml/tracking/: bytetrack_worker.py  reid_worker.py
app/models/: __init__.py  alert.py  audit_log.py  base.py  detection_event.py  ml_model.py  report.py  security_zone.py  tracked_person.py  user.py  video_feed.py  video_segment.py  watchlist_entry.py
app/repositories/: .gitkeep  __init__.py  alert.py  audit_log.py  base.py  detection_event.py  ml_model.py  report.py  security_zone.py  tracked_person.py  user.py  video_feed.py  video_segment.py  watchlist.py
app/services/: alert_service.py  analytics_service.py  archival_service.py  auth_service.py  clip_export_service.py  detection_service.py  feed_service.py  forensic_service.py  health_service.py  hls_service.py  ingester_service.py  model_service.py  recording_service.py  report_service.py  stream_manager.py  telemetry_service.py  tracked_person_service.py  transcoding_service.py  user_service.py  watchlist_service.py  zone_service.py
app/tasks/: __init__.py  alert_tasks.py  anomaly_tasks.py  archival_tasks.py  cleanup_tasks.py  detection_tasks.py  face_tasks.py  recording_tasks.py
app/utils/: .gitkeep  encryption.py  heatmap.py  ip_camera.py  minio_client.py
app/workers/: stream_worker.py
docker/: gpu.yml  production.yml
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AlertInbox.tsx  AnalyticsDashboard.tsx  TacticalMap.tsx  VideoGrid.tsx  VideoPlayer.tsx  WatchlistManager.tsx
frontend/src/hooks/: useAlertStream.ts  useAlerts.ts  useAuth.ts  useDetectionStream.ts  useMapStream.ts  useVideoPlayer.ts  useWebSocket.ts
frontend/src/pages/: AdminPage.tsx  AlertsPage.tsx  AnalyticsPage.tsx  DashboardPage.tsx  FeedsPage.tsx  ForensicsPage.tsx  HomePage.tsx  IPCameraPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReportsPage.tsx  WebcamPage.tsx
frontend/src/services/: adminService.ts  api.ts  (+8 more)
k8s/: api-deployment.yaml  configmap-secret.yaml  gpu-worker-deployment.yaml  ingress.yaml  ml-worker-deployment.yaml  storage.yaml  stream-ingester-deployment.yaml
scripts/: create_admin.py  init-db.sql  nsg_tool.py  setup_db.sql  simulate_mission.py
tests/: conftest.py  test_alerts_archival.py  test_anomaly.py  test_detection.py  test_face_recognition.py  test_feed_service.py  test_feed_service_unit.py  test_feeds_api.py  test_feeds_integration.py  test_ingestion.py  test_properties.py  test_security_static.py  test_tracking.py  test_user_management.py  test_zones_integration.py
(+28 files in other folders)
