[project]
name = "nsg-visionai-platform"
version = "0.1.0"
description = "NSG VisionAI Video Intelligence Platform - Defense-grade AI/ML surveillance system"
authors = [
    {name = "NSG IT Cell", email = "it@nsg.gov.in"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Classified"}

dependencies = [
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.9",
    
    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    
    # Task Queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "flower>=2.0.0",
    
    # ML/AI Libraries
    "opencv-python>=4.9.0",
    "opencv-contrib-python>=4.9.0",
    "ultralytics>=8.1.0",  # YOLOv8
    "deepface>=0.0.87",
    "facenet-pytorch>=2.5.3",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "onnx>=1.15.0",
    "onnxruntime-gpu>=1.16.0",
    
    # Object Storage
    "boto3>=1.34.0",
    "minio>=7.2.0",
    
    # Security & Cryptography
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    
    # Report Generation
    "reportlab>=4.0.0",
    "pillow>=10.2.0",
    "matplotlib>=3.8.0",
    
    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    "aiortc>=1.6.0",  # WebRTC for drone feeds
    
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    # Code Quality
    "black>=24.1.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "pylint>=3.0.0",
    
    # Security
    "bandit>=1.7.6",
    "safety>=3.0.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.96.0",
    "faker>=22.0.0",
    "freezegun>=1.4.0",
    "httpx>=0.26.0",
    
    # Development Tools
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "property: Property-based tests using Hypothesis",
    "integration: Integration tests",
    "unit: Unit tests",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
